Re-add loot table provider for data generators